fix for study page for #4, ie10 requires overflow hidden on div element for it to be the size of its contents

--- a/bii_webapp/apps/browse/static/browse/css/report.css
+++ b/bii_webapp/apps/browse/static/browse/css/report.css
@@ -201,6 +201,7 @@ STUDIES
     border-left: 10px solid #6e6e70;
     margin: 10px 0px;
     width: 467px;
+    overflow: hidden;
 }
 
 .assay_column_title div{
